--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 </head>
 <body>
   <script>
+    function game() {
+      for (i = 0; i < 5; i++) {
+        let playerSelection = prompt("Rock paper or scissors?");
+        let computerSelection = computerPlay();
+        console.log(playRound(playerSelection, computerSelection));
+      }
+    }
+
     let rps = ["Rock", "Paper", "Scissors"];
 
     function computerPlay() {
@@ -48,10 +56,7 @@
       }
     }
 
-    const playerSelection = "scissors";
-    const computerSelection = computerPlay();
-
-    console.log(playRound(playerSelection, computerSelection))
+    game();
   </script>
 </body>
 </html>
