--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   function game() {
     for (i = 0; i < 5; i++) {
-      let playerSelection = prompt("Rock paper or scissors?");
+      let playerSelection = prompt("Rock paper or scissors?").toUpperCase();
       let computerSelection = computerPlay();
       console.log(playRound(playerSelection, computerSelection));
     }
@@ -34,7 +34,7 @@
   }
 
   function playRound(playerSelection, computerSelection) {
-    if (playerSelection == "rock") {
+    if (playerSelection == "ROCK") {
       if (computerSelection == "Rock") {
         return "You rolled rock. Computer rolled rock. Tie! You: " + playerPoints + " point(s). Computer: " + computerPoints + " point(s).";
       }
@@ -47,7 +47,7 @@
         return "You rolled rock. Computer rolled scissors. Rock beats scissors. You gain a point! You: " + playerPoints + " point(s). Computer: " + computerPoints + " point(s).";
       }
     }
-    if (playerSelection == "paper") {
+    if (playerSelection == "PAPER") {
       if (computerSelection == "Rock") {
         playerPoints += 1;
         return "You rolled paper. Computer rolled rock. Paper beats rock. You gain a point! You: " + playerPoints + " point(s). Computer: " + computerPoints + " point(s).";
@@ -60,7 +60,7 @@
         return "You rolled paper. Computer rolled scissors. Scissors beats paper. You lose! You: " + playerPoints + " point(s). Computer: " + computerPoints + " point(s).";
       }
     }
-    if (playerSelection == "scissors") {
+    if (playerSelection == "SCISSORS") {
       if (computerSelection == "Rock") {
         computerPoints =+ 1;
         return "You rolled scissors. Computer rolled rock. Rock beats scissors. You lose! You: " + playerPoints + " point(s). Computer: " + computerPoints + " point(s).";
