Changed score check for Draw condition to be double equals instead of single equals

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     else if (playerPoints < computerPoints) {
       console.log("Final score: " + playerPoints + " to " + computerPoints + ". You lose!");
     }
-    else if (playerPoints = computerPoints) {
+    else if (playerPoints == computerPoints) {
       console.log("Final score: " + playerPoints + " to " + computerPoints + ". Draw!");
     }
   }
