Corrected the output for when player rolls scissors and computer rolls paper

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       }
       else if (computerSelection == "Paper") {
         playerPoints += 1;
-        return "You rolled scissors. Computer rolled paper. Scissors beats paper. You win! You: " + playerPoints + " point(s). Computer: " + computerPoints + " point(s).";
+        return "You rolled scissors. Computer rolled paper. Scissors beats paper. You gain a point! You: " + playerPoints + " point(s). Computer: " + computerPoints + " point(s).";
       }
       else if (computerSelection == "Scissors") {
         return "You rolled scissors. Computer rolled scissors. Tie! You: " + playerPoints + " point(s). Computer: " + computerPoints + " point(s).";
